// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`releases/util.js convertAllReleasesGraphQLResponse matches snapshot 1`] = `
{
  "data": [
    {
      "_links": {
        "__typename": "ReleaseLinks",
        "closedIssuesUrl": "http://localhost/releases-namespace/releases-project/-/issues?release_tag=v1.2&scope=all&state=closed",
        "closedMergeRequestsUrl": "http://localhost/releases-namespace/releases-project/-/merge_requests?release_tag=v1.2&scope=all&state=closed",
        "editUrl": "http://localhost/releases-namespace/releases-project/-/releases/v1.2/edit",
        "mergedMergeRequestsUrl": "http://localhost/releases-namespace/releases-project/-/merge_requests?release_tag=v1.2&scope=all&state=merged",
        "openedIssuesUrl": "http://localhost/releases-namespace/releases-project/-/issues?release_tag=v1.2&scope=all&state=opened",
        "openedMergeRequestsUrl": "http://localhost/releases-namespace/releases-project/-/merge_requests?release_tag=v1.2&scope=all&state=opened",
        "self": "http://localhost/releases-namespace/releases-project/-/releases/v1.2",
        "selfUrl": "http://localhost/releases-namespace/releases-project/-/releases/v1.2",
      },
      "assets": {
        "count": 4,
        "links": [],
        "sources": [
          {
            "__typename": "ReleaseSource",
            "format": "zip",
            "url": "http://localhost/releases-namespace/releases-project/-/archive/v1.2/releases-project-v1.2.zip",
          },
          {
            "__typename": "ReleaseSource",
            "format": "tar.gz",
            "url": "http://localhost/releases-namespace/releases-project/-/archive/v1.2/releases-project-v1.2.tar.gz",
          },
          {
            "__typename": "ReleaseSource",
            "format": "tar.bz2",
            "url": "http://localhost/releases-namespace/releases-project/-/archive/v1.2/releases-project-v1.2.tar.bz2",
          },
          {
            "__typename": "ReleaseSource",
            "format": "tar",
            "url": "http://localhost/releases-namespace/releases-project/-/archive/v1.2/releases-project-v1.2.tar",
          },
        ],
      },
      "author": {
        "__typename": "UserCore",
        "avatarUrl": "https://www.gravatar.com/avatar/47420c558894b028457615db5156a52e6b791b829a6ca611656bb2560f9dbfc3?s=80&d=identicon",
        "id": Any<String>,
        "username": "user1",
        "webUrl": "http://localhost/user1",
      },
      "commit": {
        "shortId": "b83d6e39",
        "title": "Merge branch 'branch-merged' into 'master'",
      },
      "commitPath": "http://localhost/releases-namespace/releases-project/-/commit/b83d6e391c22777fca1ed3012fce84f633d7fed0",
      "createdAt": 2019-01-03T00:00:00.000Z,
      "descriptionHtml": <p
        data-sourcepos="1:1-1:23"
        dir="auto"
      >
        An okay release
        <gl-emoji
          data-name="shrug"
          data-unicode-version="9.0"
          title="person shrugging"
        >
          🤷
        </gl-emoji>
      </p>,
      "evidences": [],
      "historicalRelease": false,
      "milestones": [],
      "name": "The second release",
      "releasedAt": 2019-01-10T00:00:00.000Z,
      "tagName": "v1.2",
      "tagPath": "/releases-namespace/releases-project/-/tags/v1.2",
      "upcomingRelease": true,
    },
    {
      "_links": {
        "__typename": "ReleaseLinks",
        "closedIssuesUrl": "http://localhost/releases-namespace/releases-project/-/issues?release_tag=v1.1&scope=all&state=closed",
        "closedMergeRequestsUrl": "http://localhost/releases-namespace/releases-project/-/merge_requests?release_tag=v1.1&scope=all&state=closed",
        "editUrl": "http://localhost/releases-namespace/releases-project/-/releases/v1.1/edit",
        "mergedMergeRequestsUrl": "http://localhost/releases-namespace/releases-project/-/merge_requests?release_tag=v1.1&scope=all&state=merged",
        "openedIssuesUrl": "http://localhost/releases-namespace/releases-project/-/issues?release_tag=v1.1&scope=all&state=opened",
        "openedMergeRequestsUrl": "http://localhost/releases-namespace/releases-project/-/merge_requests?release_tag=v1.1&scope=all&state=opened",
        "self": "http://localhost/releases-namespace/releases-project/-/releases/v1.1",
        "selfUrl": "http://localhost/releases-namespace/releases-project/-/releases/v1.1",
      },
      "assets": {
        "count": 8,
        "links": [
          {
            "__typename": "ReleaseAssetLink",
            "directAssetUrl": "http://localhost/releases-namespace/releases-project/-/releases/v1.1/downloads/binaries/awesome-app-3",
            "id": "gid://gitlab/Releases::Link/13",
            "linkType": "image",
            "name": "Image",
            "url": "https://example.com/image",
          },
          {
            "__typename": "ReleaseAssetLink",
            "directAssetUrl": "http://localhost/releases-namespace/releases-project/-/releases/v1.1/downloads/binaries/awesome-app-2",
            "id": "gid://gitlab/Releases::Link/12",
            "linkType": "package",
            "name": "Package",
            "url": "https://example.com/package",
          },
          {
            "__typename": "ReleaseAssetLink",
            "directAssetUrl": "http://localhost/releases-namespace/releases-project/-/releases/v1.1/downloads/binaries/awesome-app-1",
            "id": "gid://gitlab/Releases::Link/11",
            "linkType": "runbook",
            "name": "Runbook",
            "url": "http://localhost/releases-namespace/releases-project/runbook",
          },
          {
            "__typename": "ReleaseAssetLink",
            "directAssetUrl": "http://localhost/releases-namespace/releases-project/-/releases/v1.1/downloads/binaries/linux-amd64",
            "id": "gid://gitlab/Releases::Link/10",
            "linkType": "other",
            "name": "linux-amd64 binaries",
            "url": "https://downloads.example.com/bin/gitlab-linux-amd64",
          },
        ],
        "sources": [
          {
            "__typename": "ReleaseSource",
            "format": "zip",
            "url": "http://localhost/releases-namespace/releases-project/-/archive/v1.1/releases-project-v1.1.zip",
          },
          {
            "__typename": "ReleaseSource",
            "format": "tar.gz",
            "url": "http://localhost/releases-namespace/releases-project/-/archive/v1.1/releases-project-v1.1.tar.gz",
          },
          {
            "__typename": "ReleaseSource",
            "format": "tar.bz2",
            "url": "http://localhost/releases-namespace/releases-project/-/archive/v1.1/releases-project-v1.1.tar.bz2",
          },
          {
            "__typename": "ReleaseSource",
            "format": "tar",
            "url": "http://localhost/releases-namespace/releases-project/-/archive/v1.1/releases-project-v1.1.tar",
          },
        ],
      },
      "author": {
        "__typename": "UserCore",
        "avatarUrl": "https://www.gravatar.com/avatar/47420c558894b028457615db5156a52e6b791b829a6ca611656bb2560f9dbfc3?s=80&d=identicon",
        "id": Any<String>,
        "username": "user1",
        "webUrl": "http://localhost/user1",
      },
      "commit": {
        "shortId": "b83d6e39",
        "title": "Merge branch 'branch-merged' into 'master'",
      },
      "commitPath": "http://localhost/releases-namespace/releases-project/-/commit/b83d6e391c22777fca1ed3012fce84f633d7fed0",
      "createdAt": 2018-12-03T00:00:00.000Z,
      "descriptionHtml": <p
        data-sourcepos="1:1-1:33"
        dir="auto"
      >
        Best. Release.
        <strong
          data-sourcepos="1:16-1:24"
        >
          Ever.
        </strong>
        <gl-emoji
          data-name="rocket"
          data-unicode-version="6.0"
          title="rocket"
        >
          🚀
        </gl-emoji>
      </p>,
      "evidences": [
        {
          "__typename": "ReleaseEvidence",
          "collectedAt": "2018-12-03T00:00:00Z",
          "filepath": Any<String>,
          "id": Any<String>,
          "sha": "760d6cdfb0879c3ffedec13af470e0f71cf52c6cde4d",
        },
      ],
      "historicalRelease": false,
      "milestones": [
        {
          "__typename": "Milestone",
          "description": "The 12.3 milestone",
          "id": "gid://gitlab/Milestone/123",
          "issueStats": {
            "closed": 3,
            "total": 5,
          },
          "stats": undefined,
          "title": "12.3",
          "webPath": undefined,
          "webUrl": "/releases-namespace/releases-project/-/milestones/1",
        },
        {
          "__typename": "Milestone",
          "description": "The 12.4 milestone",
          "id": "gid://gitlab/Milestone/124",
          "issueStats": {
            "closed": 1,
            "total": 4,
          },
          "stats": undefined,
          "title": "12.4",
          "webPath": undefined,
          "webUrl": "/releases-namespace/releases-project/-/milestones/2",
        },
      ],
      "name": "The first release",
      "releasedAt": 2018-12-10T00:00:00.000Z,
      "tagName": "v1.1",
      "tagPath": "/releases-namespace/releases-project/-/tags/v1.1",
      "upcomingRelease": true,
    },
  ],
  "paginationInfo": {
    "__typename": "PageInfo",
    "endCursor": Any<String>,
    "hasNextPage": false,
    "hasPreviousPage": false,
    "startCursor": Any<String>,
  },
}
`;

exports[`releases/util.js convertOneReleaseForEditingGraphQLResponse matches snapshot 1`] = `
{
  "data": {
    "_links": {
      "__typename": "ReleaseLinks",
      "self": "http://localhost/releases-namespace/releases-project/-/releases/v1.1",
      "selfUrl": "http://localhost/releases-namespace/releases-project/-/releases/v1.1",
    },
    "assets": {
      "count": undefined,
      "links": [
        {
          "__typename": "ReleaseAssetLink",
          "directAssetPath": "/binaries/awesome-app-3",
          "id": "gid://gitlab/Releases::Link/13",
          "linkType": "image",
          "name": "Image",
          "url": "https://example.com/image",
        },
        {
          "__typename": "ReleaseAssetLink",
          "directAssetPath": "/binaries/awesome-app-2",
          "id": "gid://gitlab/Releases::Link/12",
          "linkType": "package",
          "name": "Package",
          "url": "https://example.com/package",
        },
        {
          "__typename": "ReleaseAssetLink",
          "directAssetPath": "/binaries/awesome-app-1",
          "id": "gid://gitlab/Releases::Link/11",
          "linkType": "runbook",
          "name": "Runbook",
          "url": "http://localhost/releases-namespace/releases-project/runbook",
        },
        {
          "__typename": "ReleaseAssetLink",
          "directAssetPath": "/binaries/linux-amd64",
          "id": "gid://gitlab/Releases::Link/10",
          "linkType": "other",
          "name": "linux-amd64 binaries",
          "url": "https://downloads.example.com/bin/gitlab-linux-amd64",
        },
      ],
      "sources": [],
    },
    "author": undefined,
    "createdAt": 2018-12-03T00:00:00.000Z,
    "description": "Best. Release. **Ever.** :rocket:",
    "evidences": [],
    "milestones": [
      {
        "__typename": "Milestone",
        "id": "gid://gitlab/Milestone/123",
        "issueStats": {},
        "stats": undefined,
        "title": "12.3",
        "webPath": undefined,
        "webUrl": undefined,
      },
      {
        "__typename": "Milestone",
        "id": "gid://gitlab/Milestone/124",
        "issueStats": {},
        "stats": undefined,
        "title": "12.4",
        "webPath": undefined,
        "webUrl": undefined,
      },
    ],
    "name": "The first release",
    "releasedAt": 2018-12-10T00:00:00.000Z,
    "tagName": "v1.1",
    "tagPath": "/releases-namespace/releases-project/-/tags/v1.1",
  },
}
`;

exports[`releases/util.js convertOneReleaseGraphQLResponse matches snapshot 1`] = `
{
  "data": {
    "_links": {
      "__typename": "ReleaseLinks",
      "closedIssuesUrl": "http://localhost/releases-namespace/releases-project/-/issues?release_tag=v1.1&scope=all&state=closed",
      "closedMergeRequestsUrl": "http://localhost/releases-namespace/releases-project/-/merge_requests?release_tag=v1.1&scope=all&state=closed",
      "editUrl": "http://localhost/releases-namespace/releases-project/-/releases/v1.1/edit",
      "mergedMergeRequestsUrl": "http://localhost/releases-namespace/releases-project/-/merge_requests?release_tag=v1.1&scope=all&state=merged",
      "openedIssuesUrl": "http://localhost/releases-namespace/releases-project/-/issues?release_tag=v1.1&scope=all&state=opened",
      "openedMergeRequestsUrl": "http://localhost/releases-namespace/releases-project/-/merge_requests?release_tag=v1.1&scope=all&state=opened",
      "self": "http://localhost/releases-namespace/releases-project/-/releases/v1.1",
      "selfUrl": "http://localhost/releases-namespace/releases-project/-/releases/v1.1",
    },
    "assets": {
      "count": 8,
      "links": [
        {
          "__typename": "ReleaseAssetLink",
          "directAssetUrl": "http://localhost/releases-namespace/releases-project/-/releases/v1.1/downloads/binaries/awesome-app-3",
          "id": "gid://gitlab/Releases::Link/13",
          "linkType": "image",
          "name": "Image",
          "url": "https://example.com/image",
        },
        {
          "__typename": "ReleaseAssetLink",
          "directAssetUrl": "http://localhost/releases-namespace/releases-project/-/releases/v1.1/downloads/binaries/awesome-app-2",
          "id": "gid://gitlab/Releases::Link/12",
          "linkType": "package",
          "name": "Package",
          "url": "https://example.com/package",
        },
        {
          "__typename": "ReleaseAssetLink",
          "directAssetUrl": "http://localhost/releases-namespace/releases-project/-/releases/v1.1/downloads/binaries/awesome-app-1",
          "id": "gid://gitlab/Releases::Link/11",
          "linkType": "runbook",
          "name": "Runbook",
          "url": "http://localhost/releases-namespace/releases-project/runbook",
        },
        {
          "__typename": "ReleaseAssetLink",
          "directAssetUrl": "http://localhost/releases-namespace/releases-project/-/releases/v1.1/downloads/binaries/linux-amd64",
          "id": "gid://gitlab/Releases::Link/10",
          "linkType": "other",
          "name": "linux-amd64 binaries",
          "url": "https://downloads.example.com/bin/gitlab-linux-amd64",
        },
      ],
      "sources": [
        {
          "__typename": "ReleaseSource",
          "format": "zip",
          "url": "http://localhost/releases-namespace/releases-project/-/archive/v1.1/releases-project-v1.1.zip",
        },
        {
          "__typename": "ReleaseSource",
          "format": "tar.gz",
          "url": "http://localhost/releases-namespace/releases-project/-/archive/v1.1/releases-project-v1.1.tar.gz",
        },
        {
          "__typename": "ReleaseSource",
          "format": "tar.bz2",
          "url": "http://localhost/releases-namespace/releases-project/-/archive/v1.1/releases-project-v1.1.tar.bz2",
        },
        {
          "__typename": "ReleaseSource",
          "format": "tar",
          "url": "http://localhost/releases-namespace/releases-project/-/archive/v1.1/releases-project-v1.1.tar",
        },
      ],
    },
    "author": {
      "__typename": "UserCore",
      "avatarUrl": "https://www.gravatar.com/avatar/47420c558894b028457615db5156a52e6b791b829a6ca611656bb2560f9dbfc3?s=80&d=identicon",
      "id": Any<String>,
      "username": "user1",
      "webUrl": "http://localhost/user1",
    },
    "commit": {
      "shortId": "b83d6e39",
      "title": "Merge branch 'branch-merged' into 'master'",
    },
    "commitPath": "http://localhost/releases-namespace/releases-project/-/commit/b83d6e391c22777fca1ed3012fce84f633d7fed0",
    "createdAt": 2018-12-03T00:00:00.000Z,
    "descriptionHtml": <p
      data-sourcepos="1:1-1:33"
      dir="auto"
    >
      Best. Release.
      <strong
        data-sourcepos="1:16-1:24"
      >
        Ever.
      </strong>
      <gl-emoji
        data-name="rocket"
        data-unicode-version="6.0"
        title="rocket"
      >
        🚀
      </gl-emoji>
    </p>,
    "evidences": [
      {
        "__typename": "ReleaseEvidence",
        "collectedAt": "2018-12-03T00:00:00Z",
        "filepath": Any<String>,
        "id": Any<String>,
        "sha": "760d6cdfb0879c3ffedec13af470e0f71cf52c6cde4d",
      },
    ],
    "historicalRelease": false,
    "milestones": [
      {
        "__typename": "Milestone",
        "description": "The 12.3 milestone",
        "id": "gid://gitlab/Milestone/123",
        "issueStats": {
          "closed": 3,
          "total": 5,
        },
        "stats": undefined,
        "title": "12.3",
        "webPath": undefined,
        "webUrl": "/releases-namespace/releases-project/-/milestones/1",
      },
      {
        "__typename": "Milestone",
        "description": "The 12.4 milestone",
        "id": "gid://gitlab/Milestone/124",
        "issueStats": {
          "closed": 1,
          "total": 4,
        },
        "stats": undefined,
        "title": "12.4",
        "webPath": undefined,
        "webUrl": "/releases-namespace/releases-project/-/milestones/2",
      },
    ],
    "name": "The first release",
    "releasedAt": 2018-12-10T00:00:00.000Z,
    "tagName": "v1.1",
    "tagPath": "/releases-namespace/releases-project/-/tags/v1.1",
    "upcomingRelease": true,
  },
}
`;
